# civic-extraction-agent

./: .coverage  .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  client.py  deploy-to-aws.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_extraction.py  test-docker-local.sh  tool_registry.py  tools_impl.py
agents/: __init__.py  critic.py  extractor.py  normalizer.py  orchestrator.py  planner.py  reader.py
civic_extraction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
config/: __init__.py  settings.py
context/: __init__.py  civic_context.py  state.py
deployment/: README.md  docker-entrypoint.sh  nginx-docker.conf
docs/: SYSTEM_ARCHITECTURE.md  TOOLUNIVERSE_INTEGRATION.md  repo_status.md
frontend/: DEPLOYMENT.md  deploy.sh  package-lock.json  package.json  setup-security-group.sh
hooks/: __init__.py  logging_hooks.py  safety_hooks.py
normalization/: __init__.py  normalizer.py  variant_annotator.py
outputs/: 00055_Kilpivaara_2009_extraction.json  00065_Wernig_2008_agentic_normalized.json  00065_Wernig_2008_extraction.json  00065_Wernig_2008_full_orchestration_test.json  00075_Pao_2005_extraction.json  00085_Hodi_2013_agentic_normalized.json  00085_Hodi_2013_extraction.json  00085_Hodi_2013_final_verified.json  00085_Hodi_2013_full_orchestration_test.json  00167_Denis_2015_extraction.json  00181_Paez_2004_extraction.json  Dutta_et_al-2024-Blood_Neoplasia_extraction.json  Elnaggar_et_al_extraction.json  PMID_11050000_extraction.json  PMID_12483530_extraction.json  PMID_15339850_extraction.json  (+10 more)
(+146 files in other folders)
